k8s/06-service-aliases.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: chloromaster
  labels:
    app: backend
    tier: api
spec:
  type: ClusterIP
  selector:
    app: backend
    tier: api
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: chloromaster
  labels:
    app: frontend
    tier: web
spec:
  type: ClusterIP
  selector:
    app: frontend
    tier: web
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
